Create crud api for facility type
