# model/domain/facility_type.go
@@ -1,0 +1,7 @@
+package domain
+
+type FacilityType struct {
+	Id   int64
+	Name string
+	BaseDomain
+}
